--- a/assets/style.css
+++ b/assets/style.css
@@ -16,8 +16,8 @@
   }
 
   body {
-    font-family: 'Noto Sans HK', sans-serif;
-    color: rgb(120,120,125);
+    font-family: 'Open Sans', sans-serif;
+    color: #32292F;
   }
 
    /* this overrides the default padding and margin on gridlex elements */
@@ -52,7 +52,7 @@
   h2, h3, h4, h5, h6 {
     line-height: 1;
     margin-bottom: 0.8rem;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Sniglet', cursive;
   }
 
   h2  { font-size: 2.2rem;  }
