--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,9 @@
     <!-- Magnific Popup for lightbox galleries   -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
 
-    <!-- our own custom stylesheet -->
+    <!-- CUSTOM STYLE SHEET -->
     <link rel="stylesheet" href="/assets/style.css"/>
+    <link rel="stylesheet" href="/assets/custom.css"/>
 
 </head>
 <body>
