--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,5 +1,5 @@
 .logo {
-  background-image: url('images/logo2.png');
+  background-image: url('../images/logo2.png');
   background-repeat: no-repeat;
   background-size:contain;
 }
