--- a/assets/style.css
+++ b/assets/style.css
@@ -319,7 +319,8 @@
     background-image: url('../images/banner.jpg');
     background-size: cover;
     background-position: center;
-    min-height: 10vh;
+    min-height: 30vh;
+    max-height: 50vh;
   }
 
   .fixed {
