--- a/assets/custom.css
+++ b/assets/custom.css
@@ -10,7 +10,7 @@
   background-size:contain;
 }
 
-.about {
+.coffee {
   background-image: url('../images/coffee1.png');
   background-repeat: no-repeat;
   background-size:contain;
