--- a/assets/style.css
+++ b/assets/style.css
@@ -203,6 +203,7 @@
     padding: 0.5rem;
     font-size: 1.5rem;
     font-family: 'Sniglet', cursive;
+    color: #F7B9B6
 
   }
   nav a:hover {
@@ -214,7 +215,7 @@
     margin: 0 0.5rem;
     border: 1px solid #e67e22;
     border-radius: 2px;
-    color: #e67e22;
+    color: #FFC933;
   }
 
   header nav a.emphasis:hover {
@@ -322,6 +323,7 @@
     background-image: url('../images/banner.jpg');
     background-size: contain;
     background-position: center;
+    repeat: none;
     min-height: 50vh;
   }
 
