--- a/assets/style.css
+++ b/assets/style.css
@@ -203,7 +203,7 @@
     padding: 0.5rem;
     font-size: 1.5rem;
     font-family: 'Sniglet', cursive;
-    color: #F7B9B6
+    color: #F7B9B6;
 
   }
   nav a:hover {
