--- a/assets/custom.css
+++ b/assets/custom.css
@@ -19,4 +19,11 @@
 .banner-overlay {
  background-color: rgba(0227,222,224,0.6)
  z-index: 2;
+ position: fixed;
+ width: 100%;
+ height: 100%;
+ top: 0;
+ left: 0;
+ right: 0;
+ botton: 0;
 }
