--- a/assets/style.css
+++ b/assets/style.css
@@ -53,6 +53,7 @@
     line-height: 1;
     margin-bottom: 0.8rem;
     font-family: 'Sniglet', cursive;
+    text-transform: uppercase;
   }
 
   h2  { font-size: 2.2rem;  }
@@ -128,14 +129,16 @@
   .button-solid,
   .button-inverted {
     text-decoration: none;
-    color: #e67e22;
-    border: 2px solid;
+    color: #F7B9B6;
+    border: 3px solid;
     padding: 0.6rem 2rem;
     margin-top: 1rem;
     display: inline-block;
     text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: 500;
+    font-size: 1.3rem;
+    font-weight: 800;
+    border-radius: 20px;
+    font-family: 'Sniglet', cursive;
   }
 
   .button:hover {
@@ -201,13 +204,15 @@
   .inline a {
     display: inline-block;
     padding: 0.5rem;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-family: 'Sniglet', cursive;
-    color: #F7B9B6;
+    color: #FFC933;
+    font-weight: 800;
+    text-transform: uppercase;
 
   }
   nav a:hover {
-    color: #e67e22;
+    color: #F7B9B6;
   }
 
   header nav a.emphasis {
@@ -321,10 +326,9 @@
   .banner,
   .banner-with-header {
     background-image: url('../images/banner.jpg');
-    background-size: contain;
+    background-size: cover;
     background-position: center;
-    repeat: none;
-    min-height: 50vh;
+    min-height: 80vh;
   }
 
   .fixed {
@@ -333,7 +337,7 @@
 
   .banner-with-header {
     padding-top: 1rem;
-    min-height: 50vh;
+    min-height: 60vh;
   }
 
   .absolute-header {
