--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,8 @@
   .right    {  text-align: right;    }
   .centered {  text-align: center;   }
 
-  .padded   {  padding: 5%;    }
+  .padded   {  padding: 3%;    }
+  .padded-about   {  padding: 5%;    }
   .padded-1 {  padding: 1rem;  }
   .padded-2 {  padding: 2rem;  }
 
