--- a/assets/style.css
+++ b/assets/style.css
@@ -99,8 +99,8 @@
 
   /* Icons */
 
-  .far {        /* default styles for font awesome icons */
-    font-size: 2rem;
+  .far, .fab {        /* default styles for font awesome icons */
+    font-size: 2.8rem;
     margin-bottom: 1rem;
   }
 
