--- a/assets/style.css
+++ b/assets/style.css
@@ -58,8 +58,8 @@
   }
 
   h2  { font-size: 2.2rem;  }
-  h3  { font-size: 1.8rem;  }
-  h4  { font-size: 1.4rem;  }
+  h3  { font-size: 1.8rem;font-weight: 800; }
+  h4  { font-size: 1.4rem;font-weight: 800;  }
   p   { font-size: 1rem;  }
 
   p, ul {
