--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,8 +1,8 @@
-.logo {
+/* .logo {
   background-image: url('../images/logo2.png');
   background-repeat: no-repeat;
   background-size:contain;
-}
+} */
 
 .about {
   background-image: url('../images/about1.jpg');
@@ -16,16 +16,23 @@
   background-size:contain;
 }
 
-.banner-overlay {
- background-color: rgba(0227,222,224,0.6)
- z-index: 2;
- position: fixed;
- width: 100%;
- height: 100%;
- top: 0;
- left: 0;
- right: 0;
- botton: 0;
+
+nav.fixed{
+  position: fixed;
+  top: 10rem;
+  width: 11rem;
+  background-color: #FFC933;
+}
+
+.header-offset{
+  padding-top: 8rem;
+}
+
+header nav a {
+  font-family: 'Sniglet', cursive;
+  color: #32292F;
+  font-size: 1.8rem;
+  text-transform: uppercase;
 }
 
 .merch1 {
