--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,7 @@
     text-transform: uppercase;
   }
 
-  h2  { font-size: 2.2rem;  }
+  h2  { font-size: 2rem;  }
   h3  { font-size: 1.8rem;font-weight: 800; }
   h4  { font-size: 1.4rem;font-weight: 800;  }
   p   { font-size: 1rem;  }
@@ -102,6 +102,13 @@
   .far, .fab {        /* default styles for font awesome icons */
     font-size: 2.8rem;
     margin-bottom: 1rem;
+    color: white;
+    transition: all 1s;
+  }
+
+  .far:hover, .fab:hover {
+    color: #1c6ec5;
+
   }
 
   .featured-stat {     /* styles for our featured statistic icons  */
@@ -215,14 +222,14 @@
 
   }
   nav a:hover {
-    color: #F7B9B6;
+    color: #1c6ec5;
   }
 
   header nav a.emphasis {
     /* padding: 0.5rem 2rem; */
     margin: 0 0.5rem;
     border: 1px solid #e67e22;
-    border-radius: 2px;
+    border-radius: 1px;
     color: #FFC933;
   }
 
