--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@
   .far, .fab {        /* default styles for font awesome icons */
     font-size: 2.8rem;
     margin-bottom: 1rem;
-    color: white;
+    color: #32292F;
     transition: all 1s;
   }
 
