--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
   <!-- end of meta tags -->
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK:300,400,500,700,900&display=swap" rel="stylesheet"></link>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
 
     <!-- Gridlex -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
@@ -42,7 +42,6 @@
     <!-- CUSTOM STYLE SHEET -->
     <link rel="stylesheet" href="/assets/style.css"/>
     <link rel="stylesheet" href="/assets/custom.css"/>
-
 </head>
 <body>
 
