--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,22 +1,4 @@
-/* .logo {
-  background-image: url('../images/logo2.png');
-  background-repeat: no-repeat;
-  background-size:contain;
-} */
-
-.about {
-  background-image: url('../images/about1.jpg');
-  background-repeat: no-repeat;
-  background-size:contain;
-}
-
-.coffee {
-  background-image: url('../images/coffee1.png');
-  background-repeat: no-repeat;
-  background-size:contain;
-}
-
-
+/* HEADER & HEADER NAV ELEMENTS */
 nav.fixed{
   position: relative;
   z-index: 10;
@@ -41,6 +23,7 @@ header nav a:hover {
   color: #1c6ec5;
 }
 
+/* HAMBURGER NAV MENU */
 /* this is where you style the button if you want to add more space between the spans than add padding to this div but make sure you also add it to the top and bottom active classes on there top/bottom or else your cross wont line up*/
 .burger-button {
   position:fixed;
@@ -49,18 +32,18 @@ header nav a:hover {
   z-index: 9;
   padding: 8px;
 }
-/*this is where you can chand the color of the buttons*/
+/*this is where you can change the color of the buttons*/
 .burger-button span{
   width: 25px;
-  border: 2px solid black;
-  background-color: black;
+  border: 2px solid #FFC933;
+  background-color: #FFC933;
   display: block;
   border-radius: 22px;
   transition: 2s;
 }
 .burger-button.active span{
-  border-color: #383;
-  background-color:#383;
+  border-color: #1c6ec5;
+  background-color:#1c6ec5;
 }
 
 .burger-top, .burger-bottom{
@@ -83,8 +66,8 @@ header nav a:hover {
 
 .burger-button.active .burger-middle{
   transform: rotateZ(270deg);
-  border-color: rgba(0,0,0,0);
-  background-color:rgba(0,0,0,0);
+  border-color: #1c6ec5;
+  background-color: #1c6ec5;
 }
 
 /* make sure this has the same bottom as the burger button has padding*/
@@ -103,7 +86,7 @@ header nav a:hover {
     left:0;
     right: 0;
     bottom: 0;
-    background-color: #f9f9f9;
+    background-color: #FFC933;
     padding:5px;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
     z-index: 99999999;
@@ -112,10 +95,10 @@ header nav a:hover {
 .burger-menu a {
   text-decoration: none;
   padding: 15px 11px;
-  font-size: 20px;
-  font-weight: 300;
-  color: #C3BFBC;
-  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #32292F;
+  font-family: 'Sniglet', cursive;
   display:block;
   padding:5px 15px;
   text-align:center;
@@ -128,10 +111,26 @@ header nav a:hover {
     display: block;
 } */
 
-footer {
-  background-color: #FFC933;
+/* SITE PHOTOS PUT IN AS BG IMAGE */
+/* .logo {
+  background-image: url('../images/logo2.png');
+  background-repeat: no-repeat;
+  background-size:contain;
+} */
+
+.about {
+  background-image: url('../images/about1.jpg');
+  background-repeat: no-repeat;
+  background-size:contain;
 }
 
+.coffee {
+  background-image: url('../images/coffee1.png');
+  background-repeat: no-repeat;
+  background-size:contain;
+}
+
+/* MERCH PHOTOS CURRENTLY 3 */
 .merch1 {
   background-image: url('../images/merch1.jpg');
   background-repeat: no-repeat;
@@ -148,4 +147,8 @@ footer {
   background-image: url('../images/merch4.png');
   background-repeat: no-repeat;
   background-size:contain;
+}
+
+footer {
+  background-color: #FFC933;
 }
