--- a/assets/style.css
+++ b/assets/style.css
@@ -337,9 +337,18 @@
   .banner-with-header {
     background-image: url('../images/banner.jpg');
     background-size: cover;
-    background-position: center;
-    min-height: 60vh;
+    background-position: relative;
+    min-height: 15rem;
   }
+
+  .layer {
+    background-color: rgba(28, 110, 197, .45);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 15rem;
+}
 
   .fixed {
     background-attachment: fixed;
@@ -713,6 +722,11 @@
 .open::after {
   transform: rotateZ(45deg);
 }
+/* This media query kicks into action at the gridlex m breakpoint */
+@media(max-width:1024px) {
+
+}
+
 
 /* This media query kicks into action at the gridlex sm breakpoint */
 @media(max-width:768px) {
