--- a/assets/custom.css
+++ b/assets/custom.css
@@ -82,10 +82,9 @@ header nav a:hover {
 .burger-menu {
     display: none;
     position: fixed;
-    top: 0;
     left:0;
     right: 0;
-    bottom: 0;
+    min-height: 18rem;
     background-color: #FFC933;
     padding:5px;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
