--- a/assets/custom.css
+++ b/assets/custom.css
@@ -29,10 +29,10 @@ header nav a:hover {
   position:fixed;
   top: 2vh;
   right: 2vh;
-  z-index: 9;
+  z-index: 9999999999;
   padding: 8px;
 }
-/*this is where you can change the color of the buttons*/
+/*this is where you can chand the color of the buttons*/
 .burger-button span{
   width: 25px;
   border: 2px solid #FFC933;
@@ -67,7 +67,7 @@ header nav a:hover {
 .burger-button.active .burger-middle{
   transform: rotateZ(270deg);
   border-color: rgba(0,0,0,0);
-   background-color:rgba(0,0,0,0);
+  background-color:rgba(0,0,0,0);
 }
 
 /* make sure this has the same bottom as the burger button has padding*/
@@ -82,9 +82,9 @@ header nav a:hover {
 .burger-menu {
     display: none;
     position: fixed;
+    min-height: 18rem;
     left:0;
     right: 0;
-    min-height: 18rem;
     background-color: #FFC933;
     padding:5px;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
@@ -98,6 +98,7 @@ header nav a:hover {
   font-weight: 800;
   color: #32292F;
   font-family: 'Sniglet', cursive;
+  text-transform: uppercase;
   display:block;
   padding:5px 15px;
   text-align:center;
