--- a/assets/style.css
+++ b/assets/style.css
@@ -216,7 +216,7 @@
     padding: 2rem;
     font-size: 1.8rem;
     font-family: 'Sniglet', cursive;
-    color: (255, 201, 51, .5)
+    color: (255, 201, 51, .5);
     font-weight: 800;
     text-transform: uppercase;
 
