--- a/assets/style.css
+++ b/assets/style.css
@@ -340,7 +340,7 @@
 
   .banner,
   .banner-with-header {
-    background-image: url('../images/banner.jpg');
+    background-image: url('../images/banner3.jpg');
     background-size: cover;
     background-position: relative;
     min-height: 18rem;
