--- a/assets/style.css
+++ b/assets/style.css
@@ -340,9 +340,9 @@
 
   .banner,
   .banner-with-header {
-    background-image: url('../images/banner3.jpg');
+    background-image: url('../images/banner4.jpg');
     background-size: cover;
-    background-position: relative;
+    background-position: center;
     min-height: 18rem;
   }
 
