--- a/assets/style.css
+++ b/assets/style.css
@@ -547,7 +547,7 @@
   }
 
   .email-signup .button-solid {
-    padding: 0.8em;
+    padding: 0.5rem;
     border-radius: 0;
     font-size: 1rem;
   }
