--- a/assets/custom.css
+++ b/assets/custom.css
@@ -121,6 +121,13 @@ header nav a:hover {
   position: absolute;
 } */
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .about {
   background-image: url('../images/about1.jpg');
   background-repeat: no-repeat;
