--- a/assets/style.css
+++ b/assets/style.css
@@ -34,7 +34,8 @@
 
   .left     {  text-align: left;     }
   .right    {  text-align: right;    }
-  .centered {  text-align: center;   }
+  .
+   {  text-align: center;   }
 
   .padded   {  padding: 3%;    }
   .padded-about   {  padding: 5%;    }
@@ -105,7 +106,7 @@
   /* Icons */
 
   .far, .fab {        /* default styles for font awesome icons */
-    font-size: 2.8rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
     color: #32292F;
     transition: all 1s;
@@ -218,7 +219,7 @@
   header nav a,
   .inline a {
     display: inline-block;
-    padding: 2rem;
+    padding: 1rem 3rem 0 0;
     font-size: 1.8rem;
     font-family: 'Sniglet', cursive;
     color: (255, 201, 51, .5);
@@ -499,7 +500,7 @@
   }
 
   .social-share nav [class*=fa] {
-    padding: 0 1em 0 0;
+    padding: 0 1rem 0 0;
   }
 
   .social-share hr{
