--- a/assets/custom.css
+++ b/assets/custom.css
@@ -114,7 +114,8 @@ header nav a:hover {
 
 /* FOOTER SOCIALS MENU */
 
-nav .social a{
+footer nav a,
+.social a{
   display: inline-block;
   padding: 1rem 2rem 0 0
   font-weight: 800;
