--- a/assets/custom.css
+++ b/assets/custom.css
@@ -117,7 +117,7 @@ header nav a:hover {
 footer nav a,
 .social a{
   display: inline-block;
-  padding: 1rem 2rem 0 0
+  padding: 1rem 2rem 0 0;
   font-weight: 800;
 }
 
