--- a/assets/custom.css
+++ b/assets/custom.css
@@ -148,7 +148,7 @@ footer nav a,
   background-image: url('../images/snowball.png');
   background-repeat: no-repeat;
   background-size: 20%;
-  background-position: right center;
+  background-position: right bottom;
 }
 
 .coffee {
