--- a/assets/custom.css
+++ b/assets/custom.css
@@ -145,7 +145,7 @@ footer nav a,
 }
 
 .snowball {
-  background-image: url('../images/snowball.png');
+  background-image: url('../images/Snowball.png');
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: right bottom;
