--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,9 @@
     <!-- CUSTOM STYLE SHEET -->
     <link rel="stylesheet" href="/assets/style.css"/>
     <link rel="stylesheet" href="/assets/custom.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="/images/logoFAV.png">
+
 </head>
 <body>
 
