--- a/assets/style.css
+++ b/assets/style.css
@@ -67,8 +67,14 @@
   h4  { font-size: 1.4rem;font-weight: 800;  }
   p   { font-size: 1rem;  }
 
+
   p, ul {
      margin-bottom: 0.5rem;
+  }
+
+  .credit {
+    font-size: .5rem;
+    padding: 1.5rem 0 0 0;
   }
 
   /* this makes sure that the last element in any container doesn't have margin-bottom */
