--- a/assets/style.css
+++ b/assets/style.css
@@ -73,12 +73,12 @@
   }
 
   .credit {
-    font-size: 1rem;
+    font-size: .7rem;
     padding: 1.5rem 0 0 0;
   }
 
   .creditlogo {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #100113;
     font-family: 'Modak', cursive;
     text-transform: uppercase;
