--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,37 +3,37 @@
 <head>
 
   <!-- Meta Data -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
     <!-- Meta data for SEO purposes. -->
     <title> {{page.title}} </title>
-    <meta name="description" content="{{page.meta-description}}">
-    <meta name="keywords" content="{{page.meta-keywords}}">
+    <meta name="description" content="{{page.meta-description}}" />
+    <meta name="keywords" content="{{page.meta-keywords}}" />
 
     <!-- meta data to tell the browser that your devide is responsive -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index, follow">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="index, follow" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
     <!--  Social media sharing META Tags -->
-    <meta property="og:title" content="{{page.title}}">
-    <meta property="og:description" content="{{page.meta-description}}">
-    <meta property="og:image" content="{{page.featured-image_path}}">
-    <meta property="og:url" content="{{page.url}}">
-    <meta name="twitter:card" content="{{page.meta-description}}">
-    <meta name="og:site_name" content="<!-- ADD SITE NAME HERE -->">
+    <meta property="og:title" content="{{page.title}}" />
+    <meta property="og:description" content="{{page.meta-description}}" />
+    <meta property="og:image" content="{{page.featured-image_path}}" />
+    <meta property="og:url" content="{{page.url}}" />
+    <meta name="twitter:card" content="{{page.meta-description}}" />
+    <meta name="og:site_name" content="<!-- ADD SITE NAME HERE -->" />
 
   <!-- end of meta tags -->
 
     <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700&family=Sniglet:wght@400;800&display=swap" rel="stylesheet" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Modak&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Modak&display=swap" rel="stylesheet" />
 
     <!-- Gridlex -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css" />
 
     <!-- Font Awesome Version 5 for Icons  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
@@ -42,10 +42,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
 
     <!-- CUSTOM STYLE SHEET -->
-    <link rel="stylesheet" href="/assets/style.css"/>
-    <link rel="stylesheet" href="/assets/custom.css"/>
+    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="/assets/custom.css" />
 
-    <link rel="shortcut icon" type="image/png" href="/images/logoFAV.png">
+    <link rel="shortcut icon" type="image/png" href="/images/logoFAV.png" />
 
 </head>
 <body>
@@ -102,11 +102,11 @@
     </h2>
 
     <p class="editable">
-      Currently we are serving from our carry-out window. Check out our socials to stay up to date on our open hours.
+      Currently taking orders to be delivered. Check out our socials to stay up to date on our current offerings.
     </p>
-    <br>
+    <br />
     <p class="editable">
-      <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
+      
     </p>
 
     <p class="editable">
@@ -128,12 +128,12 @@
   </div>
 
   <div class="centered center credit">
-    <a  href="https://pinkmoon-studio.com/" target="_blank"> Designed by:
-      <br>
+    <a href="https://pinkmoon-studio.com/" target="_blank"> Designed by:
+      <br />
       <span class="creditlogo">
       Pink Moon Studio
     <!-- <img src="/images/pmsFAV.png" alt="Pink Moon Studio Portfolio Arrow Cafe" class="editable" width="5%"> -->
-    </a>
+    </span></a>
   </div>
 </footer>
 
